--- a/hh-dushkina/package.json
+++ b/hh-dushkina/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-    "homepage": "https://DushkinaEL.github.io/HeadHunter",
+  "homepage": "https://DushkinaEL.github.io/HeadHunter",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -11,9 +11,10 @@
     "preview": "vite preview",
     "test": "vitest",
     "predeploy": "npm run build",
-"deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fontsource/open-sans": "^5.2.7",
     "@mantine/core": "^8.3.2",
     "@mantine/hooks": "^8.3.2",
     "@reduxjs/toolkit": "^2.9.0",
